// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`queries.ts — golden snapshots + invariants > alertEvaluator > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
             is_error=(tostring(status.code)=="2")
    | summarize curr_requests=toreal(count()),
                curr_errors=toreal(countif(is_error)) by svc
    | extend curr_error_rate=iff(curr_requests > 0, curr_errors/curr_requests, 0.0)
    | lookup criblapm_alert_prev on svc
    // Service-level p95 in a subquery join, NOT inline in the summarize
    // above: the baseline (prevWindowSummary) computes p95 with the
    // >30s streaming-span filter applied, so the current side must
    // match or services with idle-wait roots (accounting) would show
    // a fake 10x. The request/error counts above stay unfiltered —
    // changing them would silently shift months of threshold tuning.
    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | extend svc=tostring(resource.attributes['service.name']),
                 dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0
        | where dur_us < 30000000
        | summarize curr_p95_us=percentile(dur_us, 95) by svc
      ) on svc
    | extend prev_requests=iff(isnotnull(prev_req), toreal(prev_req), 0.0),
             prev_errors=iff(isnotnull(prev_err), toreal(prev_err), 0.0),
             prev_error_rate=iff(isnotnull(prev_err_rate), toreal(prev_err_rate), 0.0),
             curr_p95=iff(isnotnull(curr_p95_us), toreal(curr_p95_us), 0.0),
             prev_p95=iff(isnotnull(prev_p95_us), toreal(prev_p95_us), 0.0)
    | extend curr_err_pct=curr_error_rate * 100,
             prev_err_pct=prev_error_rate * 100,
             // is_persistent is informational — used by notification
             // logic to suppress repeat pings, NOT by detection.
             // A 25% error rate that's been 25% for an hour is still
             // a real problem that should be visible.
             is_persistent=(prev_error_rate * 100 >= 1 and (curr_error_rate * 100 - prev_error_rate * 100) < 2),
             // traffic_ratio normalizes to requests-per-minute so the
             // -15m curr window and -60m prev window compare on the
             // same scale. Without normalization a healthy service
             // would look like it's at 25% of prior traffic (15/60).
             traffic_ratio=iff(prev_requests >= 50,
                               (curr_requests / 15.0) / (prev_requests / 60.0),
                               1.0)
    // Three error_rate paths, tuned for production noise tolerance.
    // The prior ≥1% / ≥2-error floors were over-fit to chaos-
    // engineered eval scenarios (llmRateLimit, recommendationCache)
    // and fired on normal background error rates of real services.
    //   1. High absolute rate — ≥5% with ≥20 spans. Paging-worthy
    //      regardless of baseline.
    //   2. Sharp deviation from a stable baseline — current rate
    //      ≥3× prev AND ≥2% absolute AND prev window had ≥100
    //      requests (baseline is statistically meaningful).
    //   3. Catastrophic ramp on previously-clean service — ≥10
    //      errors when the prior window had effectively zero,
    //      gated on ≥50 current requests to distinguish "real
    //      service just broke" from low-volume background noise.
    // Tradeoff: silences chaos scenarios on ultra-low-volume
    // services (llmRateLimit / recommendationCache product-reviews).
    // The low-volume-mode setting (P1.2) re-enables an older arm
    // for those — opt-in only since it costs precision on noisier
    // workloads.
    // Service-level p95 regression arm (the P2 detection gap, found
    // 2026-08-18): the per-op latency arm's 250ms floor sat above
    // real regressions on fast services — recommendationCacheFailure
    // degrades recommendation from ~45ms to ~140ms p95 (3.5x, "both
    // chips fire" per FAILURE-SCENARIOS) and never alerted. Service
    // p95 over all spans runs lower than op-level entry-span p95, so
    // the floor here is 100ms with the same 3x ratio; volume gates
    // match the sharp-deviation error arm. Baseline caveat: prev is
    // the -2h..-1h window, so a degradation older than ~2h has
    // normalized into the baseline and only FRESH regressions fire.
    | extend signal_type=case(
               curr_requests == 0 and prev_requests >= 50, "silent",
               curr_err_pct >= 5 and curr_requests >= 20, "error_rate",
               curr_err_pct >= 2 and curr_err_pct >= prev_err_pct * 3
                 and prev_requests >= 100, "error_rate",
               curr_errors >= 10 and prev_errors < 1
                 and curr_requests >= 50, "error_rate",
               curr_p95 >= prev_p95 * 3 and curr_p95 >= 100000
                 and prev_p95 > 0 and curr_requests >= 20
                 and prev_requests >= 100, "latency",
               traffic_ratio <= 0.5 and prev_requests >= 50, "traffic_drop",
               "none"),
             is_bad=(
               (curr_requests == 0 and prev_requests >= 50)
               or (curr_err_pct >= 5 and curr_requests >= 20)
               or (curr_err_pct >= 2 and curr_err_pct >= prev_err_pct * 3
                   and prev_requests >= 100)
               or (curr_errors >= 10 and prev_errors < 1
                   and curr_requests >= 50)
               or (curr_p95 >= prev_p95 * 3 and curr_p95 >= 100000
                   and prev_p95 > 0 and curr_requests >= 20
                   and prev_requests >= 100)
               or (traffic_ratio <= 0.5 and prev_requests >= 50))
    // alert_id is STABLE per service (doesn't include signal_type).
    // Why: when a service recovers, signal_type rotates from
    // "error_rate" → "none", so an signal_type-keyed alert_id
    // would change too. The state export uses mode=overwrite, so
    // the old "auto:error_rate:svc" row gets wiped before the
    // state machine ever sees prev_status="firing" on the new
    // "auto:none:svc" key — meaning the resolving→ok walk never
    // fires, no "resolved" event is emitted, and the Alert Timeline
    // shows the alert as "ongoing" forever. Stable key fixes this.
    | extend alert_id=strcat("auto:health:", svc),
             evaluation_id=strcat("criblapm-eval:", tostring(bin(now(), 5m)))

    | join kind=leftouter (
        dataset="otel"
        | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
        | where isnull(is_canary) or tostring(is_canary) != "true"
        | where isnull(record_kind) or tostring(record_kind) == "evaluation"
        | where isnotempty(alert_id)
        | join kind=inner (
            dataset="otel"
            | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
            | where isnull(is_canary) or tostring(is_canary) != "true"
            | where isnull(record_kind) or tostring(record_kind) == "evaluation"
            | where isnotempty(alert_id)
            | summarize persisted_time=max(_time) by alert_id
          ) on alert_id
        | where _time == persisted_time
        | summarize persisted_evaluation_id=max(tostring(evaluation_id)),
                    persisted_status=max(tostring(alert_status)),
                    persisted_bad=max(tolong(consecutive_bad)),
                    persisted_good=max(tolong(consecutive_good)),
                    persisted_fire_count=max(tolong(fire_count))
          by alert_id
      ) on alert_id
    | extend is_retry=iff(isnotnull(persisted_evaluation_id) and persisted_evaluation_id == evaluation_id, true, false),
             prev_status=iff(isnotnull(persisted_status), persisted_status, "ok"),
             prev_bad=iff(isnotnull(persisted_bad), persisted_bad, 0),
             prev_good=iff(isnotnull(persisted_good), persisted_good, 0),
             prev_fire_count=iff(isnotnull(persisted_fire_count), persisted_fire_count, 0)
    | extend new_bad=iff(is_bad, prev_bad + 1, 0),
             new_good=iff(is_bad, 0, prev_good + 1)
    | extend alert_status=case(
               is_bad and prev_status == "ok", "pending",
               is_bad and prev_status == "pending" and new_bad >= 2, "firing",
               is_bad and prev_status == "pending", "pending",
               is_bad and prev_status == "firing", "firing",
               is_bad and prev_status == "resolving", "firing",
               not(is_bad) and prev_status == "pending", "ok",
               not(is_bad) and prev_status == "firing", "resolving",
               not(is_bad) and prev_status == "resolving" and new_good >= 3, "ok",
               not(is_bad) and prev_status == "resolving", "resolving",
               "ok"),
             consecutive_bad=new_bad,
             consecutive_good=new_good,
             fire_count=iff(is_bad and prev_status == "pending" and new_bad >= 2, prev_fire_count + 1, prev_fire_count),
             transitioned_to=case(
               is_bad and prev_status == "pending" and new_bad >= 2, "firing",
               not(is_bad) and prev_status == "resolving" and new_good >= 3, "resolved",
               "")
    | project svc, curr_requests, curr_errors, curr_error_rate,
              prev_requests, prev_errors, prev_error_rate,
              alert_id, evaluation_id, is_retry,
              signal_type, is_bad, is_persistent,
              alert_status, consecutive_bad, consecutive_good,
              fire_count, transitioned_to
    | union (
        dataset="$vt_results"
        | where jobName == "criblapm__svc_operations"
        | project svc, op=name, curr_p95_us=toreal(p95_us), curr_requests=toreal(requests)
        | lookup criblapm_op_baselines on svc, op
        | extend prev_p95_us=iff(isnotnull(p95_us), toreal(p95_us), 0.0),
                 prev_op_requests=iff(isnotnull(requests), toreal(requests), 0.0)
        // Thresholds tuned for gradual-drift scenarios. The
        // 2026-05-31 third eval scored emailMemoryLeak at 0.30
        // with 5x ratio + 500ms floor — drift over 7 min didn't
        // get there. Loosened to 3x ratio + 250ms floor with a
        // 20-span volume gate to keep the noise tolerable. Item
        // 1e in ROADMAP.
        | where isnotnull(prev_p95_us) and prev_p95_us > 0
                and curr_p95_us >= prev_p95_us * 3
                and curr_p95_us >= 250000
                and prev_op_requests >= 20
        | extend alert_id=strcat("auto:latency:", svc, ":", op),
                 evaluation_id=strcat("criblapm-eval:", tostring(bin(now(), 5m))),
                 signal_type="latency",
                 is_bad=true,
                 is_persistent=false,
                 curr_errors=0.0, curr_error_rate=0.0,
                 prev_requests=prev_op_requests, prev_errors=0.0, prev_error_rate=0.0

    | join kind=leftouter (
        dataset="otel"
        | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
        | where isnull(is_canary) or tostring(is_canary) != "true"
        | where isnull(record_kind) or tostring(record_kind) == "evaluation"
        | where isnotempty(alert_id)
        | join kind=inner (
            dataset="otel"
            | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
            | where isnull(is_canary) or tostring(is_canary) != "true"
            | where isnull(record_kind) or tostring(record_kind) == "evaluation"
            | where isnotempty(alert_id)
            | summarize persisted_time=max(_time) by alert_id
          ) on alert_id
        | where _time == persisted_time
        | summarize persisted_evaluation_id=max(tostring(evaluation_id)),
                    persisted_status=max(tostring(alert_status)),
                    persisted_bad=max(tolong(consecutive_bad)),
                    persisted_good=max(tolong(consecutive_good)),
                    persisted_fire_count=max(tolong(fire_count))
          by alert_id
      ) on alert_id
        | extend is_retry=iff(isnotnull(persisted_evaluation_id) and persisted_evaluation_id == evaluation_id, true, false),
                 prev_status=iff(isnotnull(persisted_status), persisted_status, "ok"),
                 prev_bad=iff(isnotnull(persisted_bad), persisted_bad, 0),
                 prev_good=iff(isnotnull(persisted_good), persisted_good, 0),
                 prev_fire_count=iff(isnotnull(persisted_fire_count), persisted_fire_count, 0)
        | extend new_bad=prev_bad + 1, new_good=0
        | extend alert_status=case(
                   prev_status == "ok", "pending",
                   prev_status == "pending" and new_bad >= 2, "firing",
                   prev_status == "pending", "pending",
                   prev_status == "firing", "firing",
                   prev_status == "resolving", "firing",
                   "ok"),
                 consecutive_bad=new_bad,
                 consecutive_good=0,
                 fire_count=iff(prev_status == "pending" and new_bad >= 2, prev_fire_count + 1, prev_fire_count),
                 transitioned_to=iff(prev_status == "pending" and new_bad >= 2, "firing", "")
        | project svc, curr_requests, curr_errors, curr_error_rate,
                  prev_requests, prev_errors, prev_error_rate,
                  alert_id, evaluation_id, is_retry,
                  signal_type, is_bad, is_persistent,
                  alert_status, consecutive_bad, consecutive_good,
                  fire_count, transitioned_to
    )
    // A platform retry inside the same scheduled cadence bucket must not
    // advance the state machine again. The first successful send is already
    // durable; suppressing a retry at the producer is stronger than merely
    // deduplicating conflicting rows at each reader.
    | where not(is_retry)
    | extend evaluated_at=bin(now(), 5m),
             schema_version=tolong(1),
             producer="criblapm__home_alerts", record_kind="evaluation",
             event_type=iff(transitioned_to != "", transitioned_to, "evaluated")
    | extend event_id=strcat("criblapm:alert:", evaluation_id, ":", alert_id)
    | project _time=now(), dataset="otel",
              datatype="criblapm_alert", schema_version,
              event_id, producer, record_kind, evaluation_id, evaluated_at,
              event_type, alert_id, alert_status, svc,
              signal_type, is_bad, is_persistent,
              curr_error_rate, prev_error_rate,
              curr_requests, prev_requests,
              fire_count, consecutive_bad, consecutive_good
    | export tee=true to search "otel""
`;

exports[`queries.ts — golden snapshots + invariants > alertHistory > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where event_type in ("firing", "resolved")
    | where isnull(is_canary) or tostring(is_canary) != "true"

    | extend logical_event_id=coalesce(tostring(event_id), strcat("legacy:", tostring(alert_id), ":", tostring(_time), ":", tostring(event_type)))
    | summarize _time=max(_time)
      by logical_event_id, schema_version, evaluation_id, event_type,
         alert_id, alert_status, svc, signal_type, curr_error_rate,
         prev_error_rate, curr_requests, prev_requests, fire_count
    | project _time, event_id=logical_event_id, schema_version,
              evaluation_id, event_type, alert_id, alert_status,
              svc, signal_type, curr_error_rate, prev_error_rate,
              curr_requests, prev_requests, fire_count
    | sort by _time desc
    | limit 500"
`;

exports[`queries.ts — golden snapshots + invariants > alertNotify > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "evaluation"
    | where event_type == "firing"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | summarize _time=max(_time)
      by event_id, alert_id, svc, signal_type, curr_error_rate, fire_count
    | project event_id, alert_id, svc, signal_type, curr_error_rate, fire_count, _time
    | sort by _time desc
    | limit 50"
`;

exports[`queries.ts — golden snapshots + invariants > allOperationsSummary > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0
    | where dur_us < 30000000
    | summarize requests=count(),
                p50_us=percentile(dur_us, 50),
                p95_us=percentile(dur_us, 95),
                p99_us=percentile(dur_us, 99)
      by svc, op=name
    | sort by requests desc
    | limit 1000"
`;

exports[`queries.ts — golden snapshots + invariants > allServiceOperations > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            is_error=(tostring(status.code)=="2")
    | where tostring(kind) in ("2", "5")
    | where dur_us < 30000000
    | summarize requests=count(),
                errors=countif(is_error),
                p50_us=percentile(dur_us, 50),
                p95_us=percentile(dur_us, 95),
                p99_us=percentile(dur_us, 99)
      by svc, name
    | extend error_rate=toreal(errors)/toreal(requests)
    | sort by svc asc, requests desc"
`;

exports[`queries.ts — golden snapshots + invariants > attrCatalog > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | limit 5000
    | extend svc=tostring(resource.attributes['service.name']),
             ks=bag_keys(attributes)
    | mv-expand attr_name=ks
    | extend attr_name=tostring(attr_name)
    | where isnotempty(attr_name)
    | summarize n_spans_with_key=count() by svc, attr_name
    | where n_spans_with_key >= 5
    | project svc, attr_name, n_spans_with_key"
`;

exports[`queries.ts — golden snapshots + invariants > attrValueDistribution > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | where status_code == "2"
    | extend attr_value=tostring(attributes['http.method'])
    | where isnotempty(attr_value)
    | summarize n=count() by attr_value
    | sort by n desc
    | limit 20
    | extend attr_name="http.method"
    | project attr_name, attr_value, n"
`;

exports[`queries.ts — golden snapshots + invariants > backfillSpanCounts > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0
    | where isnotempty(svc)
    | where dur_us < 30000000
    | summarize n=count() by t=bin(_time, 300s)
    | sort by t asc"
`;

exports[`queries.ts — golden snapshots + invariants > dependencies > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            parent=tostring(parent_span_id),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            is_error=(tostring(status.code)=="2")
    | where parent != "" and isnotempty(parent)
    | where dur_us < 30000000
    | project trace_id, parent, svc, dur_us, is_error
    | join kind=inner (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | extend psvc=tostring(resource.attributes['service.name']),
                psid=tostring(span_id)
        | project trace_id, psid, psvc
      ) on trace_id, $left.parent == $right.psid
    | where svc != psvc
    | summarize callCount=count(),
                errorCount=countif(is_error),
                p95DurUs=percentile(dur_us, 95)
      by parent=psvc, child=svc
    | sort by callCount desc"
`;

exports[`queries.ts — golden snapshots + invariants > deployEventsSend > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
             version=tostring(resource.attributes['service.version'])
    | where isnotempty(svc) and isnotempty(version)
    | summarize first_seen=min(_time), n_spans=count() by svc, version
    // Emit only newly-appeared (svc, version) tuples. The
    // 30-minute window is intentionally narrower than the search's
    // cadence so a stable version's first_seen (≈ start-of-window,
    // ~ -1h) never trips this filter again after its first emission.
    | where first_seen >= datetime_add('minute', -30, now())
    | extend schema_version=tolong(1),
             producer="criblapm__deploy_events", record_kind="deploy",
             event_id=strcat("criblapm:deploy:", svc, ":", version, ":", tostring(first_seen))
    | project _time=now(), dataset="otel",
              datatype="criblapm_deploy", schema_version,
              event_id, producer, record_kind,
              svc, version, first_seen, n_spans
    | export tee=true to search "otel""
`;

exports[`queries.ts — golden snapshots + invariants > errorPropagationRollup > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend child_parent=tostring(parent_span_id)
    | where isnotempty(child_parent)
    | summarize n_error_children=count() by trace_id, child_parent"
`;

exports[`queries.ts — golden snapshots + invariants > errorRateHistory > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
             is_error=(tostring(status.code)=="2")
    | summarize total=count(), errs=countif(is_error) by svc, day=bin(_time, 1d)
    | where total >= 100
    | extend day_offset=tolong((toreal(bin(now(), 1d)) - toreal(day)) / 86400.0)
    | where day_offset between (1 .. 6)
    | summarize
        d1_total=sum(iff(day_offset == 1, total, tolong(0))),
        d1_errs=sum(iff(day_offset == 1, errs, tolong(0))),
        d2_total=sum(iff(day_offset == 2, total, tolong(0))),
        d2_errs=sum(iff(day_offset == 2, errs, tolong(0))),
        d3_total=sum(iff(day_offset == 3, total, tolong(0))),
        d3_errs=sum(iff(day_offset == 3, errs, tolong(0))),
        d4_total=sum(iff(day_offset == 4, total, tolong(0))),
        d4_errs=sum(iff(day_offset == 4, errs, tolong(0))),
        d5_total=sum(iff(day_offset == 5, total, tolong(0))),
        d5_errs=sum(iff(day_offset == 5, errs, tolong(0))),
        d6_total=sum(iff(day_offset == 6, total, tolong(0))),
        d6_errs=sum(iff(day_offset == 6, errs, tolong(0)))
      by svc
    | extend
        d1_pct=iff(d1_total > 0, round(100.0 * todouble(d1_errs) / todouble(d1_total), 2), 0.0),
        d2_pct=iff(d2_total > 0, round(100.0 * todouble(d2_errs) / todouble(d2_total), 2), 0.0),
        d3_pct=iff(d3_total > 0, round(100.0 * todouble(d3_errs) / todouble(d3_total), 2), 0.0),
        d4_pct=iff(d4_total > 0, round(100.0 * todouble(d4_errs) / todouble(d4_total), 2), 0.0),
        d5_pct=iff(d5_total > 0, round(100.0 * todouble(d5_errs) / todouble(d5_total), 2), 0.0),
        d6_pct=iff(d6_total > 0, round(100.0 * todouble(d6_errs) / todouble(d6_total), 2), 0.0)
    | project svc,
              d1_pct, d2_pct, d3_pct, d4_pct, d5_pct, d6_pct,
              d1_total, d2_total, d3_total, d4_total, d5_total, d6_total
    | sort by svc asc"
`;

exports[`queries.ts — golden snapshots + invariants > findTraces (full filters) > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name'])
    | where svc=="test-svc" and name=="test-op" and tostring(attributes['error'])=="true" and tostring(attributes['http.status_code'])=="500" and (status_code == "2")
    | summarize first_seen=min(_time),
                trace_start_ns=min(start_time_unix_nano),
                trace_end_ns=max(end_time_unix_nano)
      by trace_id
    | extend trace_dur_us=(toreal(trace_end_ns)-toreal(trace_start_ns))/1000.0
    | where trace_dur_us >= 1000 and trace_dur_us <= 2000000
    | sort by first_seen desc
    | limit 50"
`;

exports[`queries.ts — golden snapshots + invariants > findTraces (no filters) > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name'])

    | summarize first_seen=min(_time),
                trace_start_ns=min(start_time_unix_nano),
                trace_end_ns=max(end_time_unix_nano)
      by trace_id
    | extend trace_dur_us=(toreal(trace_end_ns)-toreal(trace_start_ns))/1000.0

    | sort by first_seen desc
    | limit 20"
`;

exports[`queries.ts — golden snapshots + invariants > incidentEvents (all) > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "incident"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend incident_id=tostring(incident_id)

    | summarize _time=max(_time)
      by event_id, event_type, incident_id, author, status, severity,
         root_service, services, note, investigation_id, alert_event_id,
         title, producer
    | project _time, event_id, event_type, incident_id, author, status,
              severity, root_service, services, note, investigation_id,
              alert_event_id, title, producer
    | sort by _time asc
    | limit 500"
`;

exports[`queries.ts — golden snapshots + invariants > incidentEvents (scoped) > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "incident"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend incident_id=tostring(incident_id)
    | where incident_id == "inc:1787110200"
    | summarize _time=max(_time)
      by event_id, event_type, incident_id, author, status, severity,
         root_service, services, note, investigation_id, alert_event_id,
         title, producer
    | project _time, event_id, event_type, incident_id, author, status,
              severity, root_service, services, note, investigation_id,
              alert_event_id, title, producer
    | sort by _time asc
    | limit 500"
`;

exports[`queries.ts — golden snapshots + invariants > incidentGrouper > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "evaluation" and event_type == "firing"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend svc=tostring(svc)
    | summarize fire_time=max(_time)
      by trigger_event_id=tostring(event_id), svc
    | lookup criblapm_incidents on svc
    | extend direct_incident_id=iff(isnotempty(incident_id) and tostring(incident_id) != "__init__",
                                    tostring(incident_id), "")
    | project fire_time, trigger_event_id, svc, direct_incident_id
    | join kind=leftouter (
        dataset="$vt_results"
        | where jobName == "criblapm__sysarch_dependencies"
        | project fire_svc=tostring(child), svc=tostring(parent)
        | union (
            dataset="$vt_results"
            | where jobName == "criblapm__sysarch_dependencies"
            | project fire_svc=tostring(parent), svc=tostring(child)
          )
        | lookup criblapm_incidents on svc
        | where isnotempty(incident_id) and tostring(incident_id) != "__init__"
        // Adjacency attaches only to OPEN incidents. A resolved-not-
        // closed incident stays reachable through its own members (a
        // member refire reopens it), but a mere graph neighbor firing
        // is a new problem, not a resurrection — observed live
        // 2026-08-19: a background frontend flap reopened the prior
        // night's resolved payment incident through adjacency.
        | where tostring(status) == "open"
        // ...and only while the incident is young (window W): cascades
        // propagate in minutes. A later fault that is merely
        // graph-adjacent to a long-open incident is its own incident.
        | where toreal(opened_at) >= toreal(now()) - 3600
        | summarize adj_incident_id=max(tostring(incident_id)) by fire_svc
        | project svc=fire_svc, adj_incident_id
      ) on svc
    | extend attach_incident_id=iff(isnotempty(direct_incident_id), direct_incident_id,
                                    iff(isnotnull(adj_incident_id), tostring(adj_incident_id), ""))
    | extend incident_id=iff(isnotempty(attach_incident_id), attach_incident_id,
                             strcat("inc:", tostring(bin(fire_time, 15m)))),
             is_new=isempty(attach_incident_id)
    | where is_new
    // opened — collapse same-bin fires into the one new incident. min(svc)
    // is a deterministic placeholder root; the fold recomputes root as the
    // first-firing member.
    | summarize fire_time=min(fire_time), root_service=min(svc),
                services=min(svc), alert_event_id=min(trigger_event_id)
      by incident_id
    | extend event_type="opened", status="open",
             title=strcat("Service health incident: ", root_service),
             event_id=strcat(incident_id, ":opened")
    | project fire_time, incident_id, event_id, event_type, status,
              root_service, services, alert_event_id, title
    | union (
        dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "evaluation" and event_type == "firing"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend svc=tostring(svc)
    | summarize fire_time=max(_time)
      by trigger_event_id=tostring(event_id), svc
    | lookup criblapm_incidents on svc
    | extend direct_incident_id=iff(isnotempty(incident_id) and tostring(incident_id) != "__init__",
                                    tostring(incident_id), "")
    | project fire_time, trigger_event_id, svc, direct_incident_id
    | join kind=leftouter (
        dataset="$vt_results"
        | where jobName == "criblapm__sysarch_dependencies"
        | project fire_svc=tostring(child), svc=tostring(parent)
        | union (
            dataset="$vt_results"
            | where jobName == "criblapm__sysarch_dependencies"
            | project fire_svc=tostring(parent), svc=tostring(child)
          )
        | lookup criblapm_incidents on svc
        | where isnotempty(incident_id) and tostring(incident_id) != "__init__"
        // Adjacency attaches only to OPEN incidents. A resolved-not-
        // closed incident stays reachable through its own members (a
        // member refire reopens it), but a mere graph neighbor firing
        // is a new problem, not a resurrection — observed live
        // 2026-08-19: a background frontend flap reopened the prior
        // night's resolved payment incident through adjacency.
        | where tostring(status) == "open"
        // ...and only while the incident is young (window W): cascades
        // propagate in minutes. A later fault that is merely
        // graph-adjacent to a long-open incident is its own incident.
        | where toreal(opened_at) >= toreal(now()) - 3600
        | summarize adj_incident_id=max(tostring(incident_id)) by fire_svc
        | project svc=fire_svc, adj_incident_id
      ) on svc
    | extend attach_incident_id=iff(isnotempty(direct_incident_id), direct_incident_id,
                                    iff(isnotnull(adj_incident_id), tostring(adj_incident_id), ""))
    | extend incident_id=iff(isnotempty(attach_incident_id), attach_incident_id,
                             strcat("inc:", tostring(bin(fire_time, 15m)))),
             is_new=isempty(attach_incident_id)
        | extend event_type="attached", status="", root_service="",
                 services=svc, alert_event_id=trigger_event_id, title="",
                 event_id=strcat(incident_id, ":attach:", trigger_event_id)
        | project fire_time, incident_id, event_id, event_type, status,
                  root_service, services, alert_event_id, title
      )
    | join kind=leftanti (
        dataset="otel"
        | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
        | where record_kind == "incident"
        | project event_id=tostring(event_id)
      ) on event_id
    // Sort barrier — assigning _time from a column after a union
    // silently nulls it on rows from the union's subquery branch
    // unless a materializing operator sits in between (verified on
    // staging 2026-08-18; see the KQL caveats in
    // docs/cribl-app-skill/skill.md).
    | sort by fire_time asc, event_id asc
    | project _time=fire_time, dataset="otel",
              datatype="criblapm_alert",
              schema_version=tolong(1),
              event_id, producer="criblapm_incident_grouper",
              record_kind="incident", event_type, incident_id,
              author="system", status, severity="", root_service, services,
              note="", investigation_id="", alert_event_id, title
    | export tee=true to search "otel""
`;

exports[`queries.ts — golden snapshots + invariants > incidentStateFold > snapshot stable 1`] = `
"dataset="$vt_results"
        | where jobName == "criblapm__incidents_state"
        | join kind=inner (
            dataset="$vt_results"
            | where jobName == "criblapm__incidents_state"
            | summarize jobId=max(tostring(jobId))
          ) on jobId
        | project incident_id=tostring(incident_id), svc=tostring(svc),
                  first_seen=toreal(first_seen), last_fire_at=toreal(last_fire_at),
                  fire_n=tolong(fire_n), opened_at=toreal(opened_at),
                  title=tostring(title), root_service=tostring(root_service),
                  o_status=tostring(o_status), o_status_time=toreal(o_status_time),
                  o_severity=tostring(o_severity)
    | join kind=leftouter (
        dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "incident"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend incident_id=tostring(incident_id)
        | where event_type == "attached"
        | extend svc=tostring(services)
        | summarize _time=max(_time) by event_id=tostring(event_id), incident_id, svc
        | join kind=leftouter (
            dataset="$vt_results"
        | where jobName == "criblapm__incidents_state"
        | join kind=inner (
            dataset="$vt_results"
            | where jobName == "criblapm__incidents_state"
            | summarize jobId=max(tostring(jobId))
          ) on jobId
        | project incident_id=tostring(incident_id), svc=tostring(svc),
                  first_seen=toreal(first_seen), last_fire_at=toreal(last_fire_at),
                  fire_n=tolong(fire_n), opened_at=toreal(opened_at),
                  title=tostring(title), root_service=tostring(root_service),
                  o_status=tostring(o_status), o_status_time=toreal(o_status_time),
                  o_severity=tostring(o_severity)
            | project incident_id, svc, prev_last=last_fire_at
          ) on incident_id, svc
        | where _time > iff(isnotnull(prev_last), prev_last, toreal(0))
        | summarize d_first=min(_time), d_last=max(_time), d_n=count()
          by incident_id, svc
      ) on incident_id, svc
    | extend first_seen=iff(first_seen > 0, first_seen, iff(isnotnull(d_first), toreal(d_first), toreal(0))),
             last_fire_at=iff(isnotnull(d_last) and d_last > last_fire_at, toreal(d_last), last_fire_at),
             fire_n=fire_n + iff(isnotnull(d_n), tolong(d_n), tolong(0))
    | project incident_id, svc, first_seen, last_fire_at, fire_n,
              opened_at, title, root_service, o_status, o_status_time, o_severity
    | union (
        dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "incident"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend incident_id=tostring(incident_id)
        | where event_type == "attached"
        | extend svc=tostring(services)
        | summarize _time=max(_time) by event_id=tostring(event_id), incident_id, svc
        | join kind=leftouter (
            dataset="$vt_results"
        | where jobName == "criblapm__incidents_state"
        | join kind=inner (
            dataset="$vt_results"
            | where jobName == "criblapm__incidents_state"
            | summarize jobId=max(tostring(jobId))
          ) on jobId
        | project incident_id=tostring(incident_id), svc=tostring(svc),
                  first_seen=toreal(first_seen), last_fire_at=toreal(last_fire_at),
                  fire_n=tolong(fire_n), opened_at=toreal(opened_at),
                  title=tostring(title), root_service=tostring(root_service),
                  o_status=tostring(o_status), o_status_time=toreal(o_status_time),
                  o_severity=tostring(o_severity)
            | project incident_id, svc, prev_last=last_fire_at
          ) on incident_id, svc
        | where _time > iff(isnotnull(prev_last), prev_last, toreal(0))
        | summarize d_first=min(_time), d_last=max(_time), d_n=count()
          by incident_id, svc
        | join kind=leftanti (
            dataset="$vt_results"
        | where jobName == "criblapm__incidents_state"
        | join kind=inner (
            dataset="$vt_results"
            | where jobName == "criblapm__incidents_state"
            | summarize jobId=max(tostring(jobId))
          ) on jobId
        | project incident_id=tostring(incident_id), svc=tostring(svc),
                  first_seen=toreal(first_seen), last_fire_at=toreal(last_fire_at),
                  fire_n=tolong(fire_n), opened_at=toreal(opened_at),
                  title=tostring(title), root_service=tostring(root_service),
                  o_status=tostring(o_status), o_status_time=toreal(o_status_time),
                  o_severity=tostring(o_severity)
          ) on incident_id, svc
        | project incident_id, svc, first_seen=toreal(d_first),
                  last_fire_at=toreal(d_last), fire_n=tolong(d_n),
                  opened_at=toreal(0), title="", root_service="",
                  o_status="", o_status_time=toreal(0), o_severity=""
      )
    | join kind=leftouter (
        dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "incident"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend incident_id=tostring(incident_id)
        | where event_type == "opened"
        | summarize n_opened_at=min(_time), n_title=max(tostring(title)),
                    n_root=max(tostring(root_service))
          by incident_id
      ) on incident_id
    | extend opened_at=iff(opened_at > 0, opened_at,
                           iff(isnotnull(n_opened_at), toreal(n_opened_at), first_seen)),
             title=iff(isnotempty(title), title,
                       iff(isnotnull(n_title) and isnotempty(tostring(n_title)),
                           tostring(n_title), strcat("Incident ", incident_id))),
             root_service=iff(isnotempty(root_service), root_service,
                              iff(isnotnull(n_root) and isnotempty(tostring(n_root)),
                                  tostring(n_root), svc))
    | join kind=leftouter (
        dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "incident"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend incident_id=tostring(incident_id)
        | where event_type in ("status_change", "closed") and isnotempty(status)
        | summarize d_status=max(tostring(status)), d_status_time=max(_time)
          by incident_id
      ) on incident_id
    | extend o_status=iff(isnotnull(d_status) and d_status_time > o_status_time,
                          tostring(d_status), o_status),
             o_status_time=iff(isnotnull(d_status_time) and d_status_time > o_status_time,
                               toreal(d_status_time), o_status_time)
    | join kind=leftouter (
        dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "incident"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend incident_id=tostring(incident_id)
        | where event_type == "severity_change" and isnotempty(severity)
        | summarize d_severity=max(tostring(severity)) by incident_id
      ) on incident_id
    | extend o_severity=iff(isnotnull(d_severity) and isnotempty(tostring(d_severity)),
                            tostring(d_severity), o_severity)
    // Own-service liveness, joined per member row. The incident-level
    // rollup below only sees PREVIOUS-run members, so on the very first
    // fold of a new incident it is empty — without this per-row join a
    // brand-new incident whose services are actively firing would
    // derive "resolved" (observed live 2026-08-18).
    | join kind=leftouter (
        dataset="$vt_results"
        | where jobName == "criblapm__home_alerts"
        | join kind=inner (
            dataset="$vt_results"
            | where jobName == "criblapm__home_alerts"
            | summarize jobId=max(tostring(jobId))
          ) on jobId
        | extend svc=tostring(svc)
        | summarize live_bad=countif(tostring(alert_status) in ("pending", "firing", "resolving")) by svc
      ) on svc
    | extend own_bad=iff(isnotnull(live_bad) and live_bad > 0, 1, 0)
    | join kind=leftouter (
        dataset="$vt_results"
        | where jobName == "criblapm__incidents_state"
        | join kind=inner (
            dataset="$vt_results"
            | where jobName == "criblapm__incidents_state"
            | summarize jobId=max(tostring(jobId))
          ) on jobId
        | project incident_id=tostring(incident_id), svc=tostring(svc),
                  first_seen=toreal(first_seen), last_fire_at=toreal(last_fire_at),
                  fire_n=tolong(fire_n), opened_at=toreal(opened_at),
                  title=tostring(title), root_service=tostring(root_service),
                  o_status=tostring(o_status), o_status_time=toreal(o_status_time),
                  o_severity=tostring(o_severity)
        | join kind=leftouter (
            dataset="$vt_results"
        | where jobName == "criblapm__home_alerts"
        | join kind=inner (
            dataset="$vt_results"
            | where jobName == "criblapm__home_alerts"
            | summarize jobId=max(tostring(jobId))
          ) on jobId
        | extend svc=tostring(svc)
        | summarize live_bad=countif(tostring(alert_status) in ("pending", "firing", "resolving")) by svc
          ) on svc
        | extend bad=iff(isnotnull(live_bad) and live_bad > 0, 1, 0)
        | summarize prev_inc_last=max(last_fire_at), n_svcs_prev=dcount(svc),
                    inc_bad=sum(bad), prev_title=max(title),
                    prev_root=max(root_service), prev_opened=min(opened_at)
          by incident_id
      ) on incident_id
    // Members attached after the opened event left the delta window
    // would otherwise carry the "Incident <id>" fallback title, their
    // own svc as root, and their own first fire as opened_at (observed
    // live 2026-08-19 — the page then windowed the timeline from the
    // newest member and hid older warroom notes). The carried rows are
    // authoritative for incident-level fields: prev wins.
    | extend title=iff(isnotnull(prev_title) and isnotempty(tostring(prev_title))
                       and not(tostring(prev_title) == strcat("Incident ", incident_id)),
                       tostring(prev_title), title),
             root_service=iff(isnotnull(prev_root) and isnotempty(tostring(prev_root)),
                              tostring(prev_root), root_service),
             opened_at=iff(isnotnull(prev_opened) and prev_opened > 0, toreal(prev_opened), opened_at)
    | extend inc_last_fire=iff(isnotnull(prev_inc_last) and prev_inc_last > last_fire_at,
                               toreal(prev_inc_last), last_fire_at),
             inc_bad_n=iff(isnotnull(inc_bad), tolong(inc_bad), tolong(0)),
             n_svcs=iff(isnotnull(n_svcs_prev) and n_svcs_prev > 0, tolong(n_svcs_prev), tolong(1))
    | extend derived_status=case(
               own_bad > 0 or inc_bad_n > 0, "open",
               inc_last_fire >= toreal(now()) - 600, "open",
               inc_last_fire >= toreal(now()) - 86400, "resolved",
               "closed"),
             derived_severity=case(n_svcs >= 3, "sev2", n_svcs == 2, "sev3", "sev4")
    // Status precedence: a human/agent override rules while the
    // incident is ACTIVE (and "closed" is terminal regardless), but
    // once every alert has cleared long enough that the system derives
    // resolved/closed, that supersedes an active-state override —
    // otherwise an incident marked "identified" would never
    // auto-resolve (its o_status_time stays newer than the last fire
    // forever once fires stop).
    | extend status=case(
               isnotempty(o_status) and o_status_time >= inc_last_fire
                 and o_status == "closed", "closed",
               isnotempty(o_status) and o_status_time >= inc_last_fire
                 and derived_status == "open", o_status,
               derived_status),
             severity=iff(isnotempty(o_severity), o_severity, derived_severity)
    | where not(status == "closed" and inc_last_fire < toreal(now()) - 604800)
    // NO trailing sort: a "| sort" after this join pipeline silently
    // drops every row (verified live 2026-08-18 — 3 rows in, 0 out,
    // single- or multi-key alike; see skill.md). Readers order
    // client-side.
    | project incident_id, svc, status, severity, opened_at, first_seen,
              last_fire_at, fire_n, n_svcs, inc_last_fire, root_service, title,
              o_status, o_status_time, o_severity"
`;

exports[`queries.ts — golden snapshots + invariants > investigationEvents (all) > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "investigation"
    | where isnull(is_canary) or tostring(is_canary) != "true"

    | summarize _time=max(_time)
      by event_id, schema_version, event_type, alert_id,
         investigation_id, trigger_event_id, svc, signal_type, conclusion
    | project _time, event_id, schema_version, event_type, alert_id,
              investigation_id, trigger_event_id, svc, signal_type, conclusion
    | sort by _time desc
    | limit 200"
`;

exports[`queries.ts — golden snapshots + invariants > investigationEvents (scoped) > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where record_kind == "investigation"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | where svc == "test-svc"
    | summarize _time=max(_time)
      by event_id, schema_version, event_type, alert_id,
         investigation_id, trigger_event_id, svc, signal_type, conclusion
    | project _time, event_id, schema_version, event_type, alert_id,
              investigation_id, trigger_event_id, svc, signal_type, conclusion
    | sort by _time desc
    | limit 50"
`;

exports[`queries.ts — golden snapshots + invariants > listMetricNames > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(_metric)
    | extend svc=tostring(['service.name'])
    | summarize samples=count(), services=dcount(svc),
                metric_type=max(_metric_type)
      by name=tostring(_metric)
    | sort by name asc
    | limit 500"
`;

exports[`queries.ts — golden snapshots + invariants > logServices > snapshot stable 1`] = `
"dataset="otel"
    | where isnotnull(body) and isnotnull(severity_number)
    | extend svc=tostring(resource.attributes['service.name'])
    | summarize by svc
    | sort by svc asc"
`;

exports[`queries.ts — golden snapshots + invariants > messagingDependencies > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            is_error=(tostring(status.code)=="2"),
            msg_op=tostring(attributes['messaging.operation']),
            msg_dest=tostring(attributes['messaging.destination.name']),
            msg_system=tostring(attributes['messaging.system'])
    | where isnotempty(msg_dest) and isnotempty(msg_op)
    | where dur_us < 30000000
    | summarize spans=count(),
                errors=countif(is_error),
                p95_us=percentile(dur_us, 95)
      by svc, msg_dest, msg_op, msg_system
    | sort by spans desc"
`;

exports[`queries.ts — golden snapshots + invariants > metricDurationExport > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            operation=tostring(name),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            dur_ms=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000000.0,
            _time=bin(_time, 1m)
    | where isnotempty(svc) and dur_ms >= 0
    | where tostring(kind) in ("2", "5")

    | where dur_us < 30000000
    | project _time, svc, operation, dur_ms
    | extend name="criblapm_request_duration_ms"
    | export to metrics type=histogram timeField=_time nameField=name valueField=dur_ms labelFields=[svc, operation]"
`;

exports[`queries.ts — golden snapshots + invariants > metricDurationExportSampled > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            operation=tostring(name),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            dur_ms=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000000.0,
            _time=bin(_time, 1m)
    | where isnotempty(svc) and dur_ms >= 0
    | where tostring(kind) in ("2", "5")
    | where substring(tolower(tostring(span_id)), 0, 1) in ("0", "1", "2", "3")
    | where dur_us < 30000000
    | project _time, svc, operation, dur_ms
    | extend name="criblapm_request_duration_ms"
    | export to metrics type=histogram timeField=_time nameField=name valueField=dur_ms labelFields=[svc, operation]"
`;

exports[`queries.ts — golden snapshots + invariants > metricEdgeCallsExport > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            parent_sid=tostring(parent_span_id),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            outcome=iff(tostring(status.code)=="2", "error", "ok")
    | where parent_sid != "" and isnotempty(parent_sid)
    | where dur_us < 30000000
    | project _time, trace_id, parent_sid, svc, outcome
    | join kind=inner (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | extend psvc=tostring(resource.attributes['service.name']),
                psid=tostring(span_id)
        | project trace_id, psid, psvc
      ) on trace_id, $left.parent_sid == $right.psid
    | where svc != psvc
    | summarize value=count() by bin(_time, 1m), parent=psvc, child=svc, outcome
    | project-rename _time=bin_time_1m
    | extend name="criblapm_edge_calls_total", type="counter"
    | export to metrics typeField=type timeField=_time nameField=name valueField=value labelFields=[parent, child, outcome]"
`;

exports[`queries.ts — golden snapshots + invariants > metricEdgeDurationExport > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            parent_sid=tostring(parent_span_id),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            dur_ms=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000000.0,
            _time=bin(_time, 1m)
    | where parent_sid != "" and isnotempty(parent_sid) and dur_ms >= 0
    | where dur_us < 30000000
    | project _time, trace_id, parent_sid, svc, dur_ms
    | join kind=inner (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | extend psvc=tostring(resource.attributes['service.name']),
                psid=tostring(span_id)
        | project trace_id, psid, psvc
      ) on trace_id, $left.parent_sid == $right.psid
    | where svc != psvc
    | project _time, parent=psvc, child=svc, dur_ms
    | extend name="criblapm_edge_duration_ms"
    | export to metrics type=histogram timeField=_time nameField=name valueField=dur_ms labelFields=[parent, child]"
`;

exports[`queries.ts — golden snapshots + invariants > metricEdgeLatencyP95Export > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            parent_sid=tostring(parent_span_id),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            dur_ms=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000000.0,
            _time=bin(_time, 1m)
    | where parent_sid != "" and isnotempty(parent_sid) and dur_ms >= 0
    | where dur_us < 30000000
    | project _time, trace_id, parent_sid, svc, dur_ms
    | join kind=inner (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | extend psvc=tostring(resource.attributes['service.name']),
                psid=tostring(span_id)
        | project trace_id, psid, psvc
      ) on trace_id, $left.parent_sid == $right.psid
    | where svc != psvc
    | summarize value=percentile(dur_ms, 95) by _time, parent=psvc, child=svc
    | extend name="criblapm_edge_latency_ms", type="gauge", quantile="p95"
    | export to metrics typeField=type timeField=_time nameField=name valueField=value labelFields=[parent, child, quantile]"
`;

exports[`queries.ts — golden snapshots + invariants > metricLatencyPercentileExport > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            dur_ms=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000000.0
    | where isnotempty(svc) and dur_ms >= 0
    | where tostring(kind) in ("2", "5")
    | where dur_us < 30000000
    | summarize value=percentile(dur_ms, 95) by bin(_time, 1m), svc
    | project-rename _time=bin_time_1m
    | extend name="criblapm_request_latency_ms", type="gauge", quantile="p95"
    | export to metrics typeField=type timeField=_time nameField=name valueField=value labelFields=[svc, quantile]"
`;

exports[`queries.ts — golden snapshots + invariants > metricLatencyPercentileExport op > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            operation=tostring(name),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            dur_ms=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000000.0
    | where isnotempty(svc) and dur_ms >= 0
    | where tostring(kind) in ("2", "5")
    | where dur_us < 30000000
    | summarize value=percentile(dur_ms, 50) by bin(_time, 1m), svc, operation
    | project-rename _time=bin_time_1m
    | extend name="criblapm_op_latency_ms", type="gauge", quantile="p50"
    | export to metrics typeField=type timeField=_time nameField=name valueField=value labelFields=[svc, operation, quantile]"
`;

exports[`queries.ts — golden snapshots + invariants > metricMessagingDurationExport > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            dur_ms=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000000.0,
            _time=bin(_time, 1m),
            op=tostring(attributes['messaging.operation']),
            dest=tostring(attributes['messaging.destination.name']),
            system=tostring(attributes['messaging.system'])
    | where isnotempty(dest) and isnotempty(op) and dur_ms >= 0
    | where dur_us < 30000000
    | project _time, svc, dest, op, system, dur_ms
    | extend name="criblapm_messaging_duration_ms"
    | export to metrics type=histogram timeField=_time nameField=name valueField=dur_ms labelFields=[svc, dest, op, system]"
`;

exports[`queries.ts — golden snapshots + invariants > metricMessagingExport > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            outcome=iff(tostring(status.code)=="2", "error", "ok"),
            op=tostring(attributes['messaging.operation']),
            dest=tostring(attributes['messaging.destination.name']),
            system=tostring(attributes['messaging.system'])
    | where isnotempty(dest) and isnotempty(op)
    | where dur_us < 30000000
    | summarize value=count() by bin(_time, 1m), svc, dest, op, system, outcome
    | project-rename _time=bin_time_1m
    | extend name="criblapm_messaging_total", type="counter"
    | export to metrics typeField=type timeField=_time nameField=name valueField=value labelFields=[svc, dest, op, system, outcome]"
`;

exports[`queries.ts — golden snapshots + invariants > metricMessagingLatencyP95Export > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            dur_ms=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000000.0,
            _time=bin(_time, 1m),
            op=tostring(attributes['messaging.operation']),
            dest=tostring(attributes['messaging.destination.name']),
            system=tostring(attributes['messaging.system'])
    | where isnotempty(dest) and isnotempty(op) and dur_ms >= 0
    | where dur_us < 30000000
    | summarize value=percentile(dur_ms, 95) by _time, svc, dest, op, system
    | extend name="criblapm_msg_latency_ms", type="gauge", quantile="p95"
    | export to metrics typeField=type timeField=_time nameField=name valueField=value labelFields=[svc, dest, op, system, quantile]"
`;

exports[`queries.ts — golden snapshots + invariants > metricRequestsExport > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            operation=tostring(name),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            outcome=iff(tostring(status.code)=="2", "error", "ok")
    | where isnotempty(svc)
    | where tostring(kind) in ("2", "5")
    | where dur_us < 30000000
    | summarize value=count() by bin(_time, 1m), svc, operation, outcome
    | project-rename _time=bin_time_1m
    | extend name="criblapm_requests_total", type="counter"
    | export to metrics typeField=type timeField=_time nameField=name valueField=value labelFields=[svc, operation, outcome]"
`;

exports[`queries.ts — golden snapshots + invariants > metricSampleRecords > snapshot stable 1`] = `"dataset="otel" | where datatype == "generic_metrics" | limit 500"`;

exports[`queries.ts — golden snapshots + invariants > metricSampleRow > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(['http.server.request.duration'])
    | limit 1"
`;

exports[`queries.ts — golden snapshots + invariants > metricServices > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(['http.server.request.duration'])
    | extend svc=tostring(['service.name'])
    | where isnotempty(svc)
    | summarize by svc
    | sort by svc asc"
`;

exports[`queries.ts — golden snapshots + invariants > metricStatusClassExport > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            http_status=coalesce(toint(attributes['http.response.status_code']),
                                 toint(attributes['http.status_code'])),
            grpc_status=toint(attributes['rpc.grpc.status_code'])
    | where isnotempty(svc)
    | where tostring(kind) in ("2", "5")
    | where dur_us < 30000000
    | extend status_class=case(
        http_status == 503, "503",
        http_status == 504, "504",
        http_status == 502, "502",
        http_status == 500, "500",
        http_status >= 500 and http_status < 600, "other_5xx",
        http_status >= 400 and http_status < 500, "4xx",
        isnotnull(grpc_status) and grpc_status != 0, "grpc_err",
        "ok")
    | summarize value=count() by bin(_time, 1m), svc, status_class
    | project-rename _time=bin_time_1m
    | extend name="criblapm_status_class_total", type="counter"
    | export to metrics typeField=type timeField=_time nameField=name valueField=value labelFields=[svc, status_class]"
`;

exports[`queries.ts — golden snapshots + invariants > metricTimeSeries (basic) > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(['http.server.request.duration'])
    | extend svc=tostring(['service.name'])

    | summarize val=percentile(toreal(['http.server.request.duration']), 95)
      by bucket=bin(_time, 60s)
    | sort by bucket asc"
`;

exports[`queries.ts — golden snapshots + invariants > metricTimeSeries (grouped) > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(['http.server.request.duration'])
    | extend svc=tostring(['service.name']), grp=tostring(['http.route'])
    | where svc == "test-svc"
    | summarize val=max(toreal(['http.server.request.duration']))
      by bucket=bin(_time, 60s), grp
    | sort by bucket asc"
`;

exports[`queries.ts — golden snapshots + invariants > noiseBudgetByService > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_alert"
    | where event_type == "firing"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend logical_event_id=coalesce(tostring(event_id), strcat("legacy:", tostring(alert_id), ":", tostring(_time), ":", tostring(event_type))),
             persistent_int=iff(tostring(is_persistent)=="true", 1, 0)
    | summarize event_time=max(_time), persistent_int=max(persistent_int)
      by logical_event_id, svc, alert_id
    | extend day=bin(event_time, 1d)
    | summarize fires=count(),
                persistent_fires=countif(persistent_int==1),
                services_distinct_alerts=dcount(alert_id)
      by svc, day
    | extend noisy_fires=fires - persistent_fires
    | project svc, day, fires, persistent_fires, noisy_fires, services_distinct_alerts
    | sort by day desc, fires desc"
`;

exports[`queries.ts — golden snapshots + invariants > operationAnomaliesFromLookup > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
             dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0
    | where dur_us < 30000000
    | summarize curr_p95_us=percentile(dur_us, 95),
                curr_count=count()
      by svc, op=name
    | lookup criblapm_op_baselines on svc, op
    | extend prev_p95_us=toreal(p95_us),
             prev_requests=toreal(requests)
    | where isnotnull(prev_p95_us) and prev_p95_us > 0
    | where curr_p95_us >= prev_p95_us * 3
      and curr_p95_us >= 250000
      and prev_requests >= 100
    | project svc, op,
              curr_p95_us,
              prev_p95_us,
              requests=curr_count,
              ratio=curr_p95_us/prev_p95_us
    | sort by ratio desc
    | limit 50"
`;

exports[`queries.ts — golden snapshots + invariants > operations > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name'])
    | where svc=="test-svc"
    | summarize by name
    | sort by name asc"
`;

exports[`queries.ts — golden snapshots + invariants > podUptime > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
             pod=tostring(resource.attributes['k8s.pod.name']),
             start_iso=tostring(resource.attributes['k8s.pod.start_time'])
    | where isnotempty(pod) and isnotempty(start_iso)
    | where svc == "test-svc"
    | summarize start_iso=max(start_iso), last_seen=max(_time) by svc, pod
    | extend uptime_hours=abs(datetime_diff('hour', todatetime(start_iso), unixtime_seconds_todatetime(toreal(last_seen))))
    | project svc, pod, start_iso, uptime_hours, last_seen
    | sort by uptime_hours desc"
`;

exports[`queries.ts — golden snapshots + invariants > prevWindowSummary > snapshot stable 1`] = `
"print svc="__sentinel__", prev_req=tolong(0), prev_err=tolong(0), prev_raw_err=tolong(0), prev_p95_us=todouble(0.0), prev_err_rate=todouble(0.0)
    | union (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | extend svc=tostring(resource.attributes['service.name']),
                dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
                is_error=(tostring(status.code)=="2")
        | where dur_us < 30000000
        | summarize prev_req=count(),
                    prev_raw_err=countif(is_error),
                    prev_p95_us=percentile(dur_us, 95)
          by svc
        | join kind=leftouter (
            dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend svc=tostring(resource.attributes['service.name']),
             span_kind=tostring(kind),
             http_status=toint(attributes['http.response.status_code']),
             grpc_status=toint(attributes['rpc.grpc.status_code']),
             sid=tostring(span_id)


    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | where tostring(parent_span_id) == ""
        | extend root_svc=tostring(resource.attributes['service.name'])
        | project trace_id, root_svc
        | lookup criblapm_trace_originators on root_svc
      ) on trace_id
    | extend trace_origin=coalesce(type, "unknown")
    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend child_parent=tostring(parent_span_id)
    | where isnotempty(child_parent)
    | summarize n_error_children=count() by trace_id, child_parent
      ) on trace_id, $left.sid == $right.child_parent
    | extend has_error_child=isnotnull(n_error_children)
    | extend counts_as_error = not((has_error_child == true) or (trace_origin == "user" and (isnotnull(http_status) and http_status >= 400 and http_status <= 499)) or (trace_origin == "user" and grpc_status in (3,5,6,7,11,16)))
    | where counts_as_error
    | summarize filtered_errors=count() by svc
          ) on svc
        | extend prev_err=coalesce(filtered_errors, tolong(0))
        | extend prev_err_rate=iff(prev_req > 0, toreal(prev_err)/toreal(prev_req), 0.0)
        | project svc, prev_req, prev_err, prev_raw_err, prev_p95_us, prev_err_rate
      )
    | export mode=overwrite
             description="Cribl APM - previous window service summary"
             to lookup criblapm_alert_prev"
`;

exports[`queries.ts — golden snapshots + invariants > rawRecentErrorSpans > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend svc=tostring(resource.attributes['service.name']),
             span_kind=tostring(kind),
             msg=tostring(status.message),
             http_status=toint(attributes['http.response.status_code']),
             grpc_status=toint(attributes['rpc.grpc.status_code']),
             sid=tostring(span_id)
    | sort by _time desc
    | limit 300
    | project _time, svc, name, span_kind, http_status, grpc_status, msg, trace_id, sid

    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | where tostring(parent_span_id) == ""
        | extend root_svc=tostring(resource.attributes['service.name'])
        | project trace_id, root_svc
        | lookup criblapm_trace_originators on root_svc
      ) on trace_id
    | extend trace_origin=coalesce(type, "unknown")
    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend child_parent=tostring(parent_span_id)
    | where isnotempty(child_parent)
    | summarize n_error_children=count() by trace_id, child_parent
      ) on trace_id, $left.sid == $right.child_parent
    | extend has_error_child=isnotnull(n_error_children)
    | project _time, svc, name, span_kind, http_status, grpc_status,
              msg, trace_id, root_svc, trace_origin, has_error_child"
`;

exports[`queries.ts — golden snapshots + invariants > rawSlowestTraces > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            parent=tostring(parent_span_id),
            is_root=(parent=="" or isempty(parent)),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0
    | summarize span_count=count(),
                trace_start_ns=min(start_time_unix_nano),
                trace_end_ns=max(end_time_unix_nano),
                max_non_root_dur_us=maxif(dur_us, is_root == false),
                root_svc=minif(svc, is_root),
                root_op=minif(name, is_root)
      by trace_id
    | extend trace_dur_us=(toreal(trace_end_ns)-toreal(trace_start_ns))/1000.0
    | where isnotnull(root_svc)
    | extend max_child_us=iff(isnull(max_non_root_dur_us), 0.0, toreal(max_non_root_dur_us))
    | where not (trace_dur_us > 30000000 and (span_count < 3 or (max_child_us / trace_dur_us) < 0.1) and not (root_op matches regex "[Cc]onsume[d]?|CONSUME[D]?"))
    | sort by trace_dur_us desc
    | limit 500"
`;

exports[`queries.ts — golden snapshots + invariants > recentDeployEvents > snapshot stable 1`] = `
"dataset="otel"
    | where coalesce(tostring(data_datatype), tostring(datatype)) == "criblapm_deploy"
    | where isnull(is_canary) or tostring(is_canary) != "true"
    | extend logical_event_id=coalesce(tostring(event_id), strcat("legacy:", tostring(svc), ":", tostring(version), ":", tostring(first_seen))),
             svc=tostring(svc), version=tostring(version),
             first_seen_num=toreal(first_seen), n_spans_num=tolong(n_spans)
    | summarize first_seen_ms=max(first_seen_num)*1000,
                n_spans_total=max(n_spans_num)
      by logical_event_id, svc, version
    | sort by first_seen_ms desc
    | limit 25"
`;

exports[`queries.ts — golden snapshots + invariants > recentErrorTraces (all) > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            is_error=(tostring(status.code)=="2")
    | where is_error

    | summarize first_seen=max(_time),
                error_count=count()
      by trace_id
    | sort by first_seen desc
    | limit 20"
`;

exports[`queries.ts — golden snapshots + invariants > recentErrorTraces (scoped) > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            is_error=(tostring(status.code)=="2")
    | where is_error
    | where svc=="test-svc"
    | summarize first_seen=max(_time),
                error_count=count()
      by trace_id
    | sort by first_seen desc
    | limit 20"
`;

exports[`queries.ts — golden snapshots + invariants > searchLogs > snapshot stable 1`] = `
"dataset="otel"
    | where isnotnull(body) and isnotnull(severity_number) and tostring(resource.attributes['service.name'])=="test-svc" and severity_number >= 17 and tostring(body) contains "connection refused"
    | project _time, trace_id, span_id, body, severity_text, severity_number,
              attributes,
              service_name=tostring(resource.attributes['service.name']),
              pod_name=tostring(resource.attributes['k8s.pod.name']),
              code_file=tostring(attributes['code.file.path']),
              code_function=tostring(attributes['code.function.name']),
              code_line=attributes['code.line.number']
    | sort by _time desc
    | limit 100"
`;

exports[`queries.ts — golden snapshots + invariants > serviceInstances > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            instance_id=tostring(resource.attributes['service.instance.id']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            is_error=(tostring(status.code)=="2")
    | where svc=="test-svc"
    | where tostring(kind) in ("2", "5")
    | where dur_us < 30000000
    | summarize requests=count(),
                errors=countif(is_error),
                p50_us=percentile(dur_us, 50),
                p95_us=percentile(dur_us, 95),
                p99_us=percentile(dur_us, 99)
      by instance_id
    | extend error_rate=toreal(errors)/toreal(requests)
    | sort by requests desc"
`;

exports[`queries.ts — golden snapshots + invariants > serviceMetricDelta > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(['k8s.container.restarts'])
    | extend svc=tostring(['service.name']),
             dep=tostring(['k8s.deployment.name']),
             pod=tostring(['k8s.pod.name']),
             container=tostring(['k8s.container.name'])
    | where svc == "test-svc" or dep == "test-svc"
    | summarize d=max(toreal(['k8s.container.restarts']))-min(toreal(['k8s.container.restarts']))
      by pod, container
    | summarize delta=sum(d)"
`;

exports[`queries.ts — golden snapshots + invariants > serviceMetricLatest > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(['process.runtime.go.goroutines'])
    | extend svc=tostring(['service.name']),
             dep=tostring(['k8s.deployment.name'])
    | where svc == "test-svc" or dep == "test-svc"
    | sort by _time desc
    | limit 1
    | project val=toreal(['process.runtime.go.goroutines'])"
`;

exports[`queries.ts — golden snapshots + invariants > serviceMetricSampleRecords > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | extend svc=tostring(['service.name']),
             dep=tostring(['k8s.deployment.name'])
    | where svc == "test-svc" or dep == "test-svc"
    | limit 500"
`;

exports[`queries.ts — golden snapshots + invariants > serviceMetricTimeSeries > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(['http.server.request.duration'])
    | extend svc=tostring(['service.name']),
             dep=tostring(['k8s.deployment.name'])
    | where svc == "test-svc" or dep == "test-svc"
    | summarize val=percentile(toreal(['http.server.request.duration']), 95) by bucket=bin(_time, 60s)
    | sort by bucket asc"
`;

exports[`queries.ts — golden snapshots + invariants > serviceMetricsBatch > snapshot stable 1`] = `
"dataset="otel" | where datatype == "generic_metrics"
    | where isnotnull(['m.a']) or isnotnull(['m.b'])
    | extend svc=tostring(['service.name']),
             dep=tostring(['k8s.deployment.name'])
    | where svc == "test-svc" or dep == "test-svc"
    | extend bucket=bin(_time, 60s)
    | sort by bucket asc"
`;

exports[`queries.ts — golden snapshots + invariants > serviceOperations > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            is_error=(tostring(status.code)=="2")
    | where svc=="test-svc"
    | where tostring(kind) in ("2", "5")
    | where dur_us < 30000000
    | summarize requests=count(),
                errors=countif(is_error),
                p50_us=percentile(dur_us, 50),
                p95_us=percentile(dur_us, 95),
                p99_us=percentile(dur_us, 99)
      by name
    | extend error_rate=toreal(errors)/toreal(requests)
    | sort by requests desc
    | limit 50"
`;

exports[`queries.ts — golden snapshots + invariants > serviceStatusCodeMix > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
             dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
             http_status=coalesce(toint(attributes['http.response.status_code']),
                                  toint(attributes['http.status_code'])),
             grpc_status=toint(attributes['rpc.grpc.status_code'])
    | where svc=="test-svc"
    | where dur_us < 30000000
    | extend status_class=case(
        http_status == 503, "503",
        http_status == 504, "504",
        http_status == 502, "502",
        http_status == 500, "500",
        http_status >= 500 and http_status < 600, "other_5xx",
        http_status >= 400 and http_status < 500, "4xx",
        isnotnull(grpc_status) and grpc_status != 0, "grpc_err",
        "ok")
    | summarize n=count() by status_class, bucket=bin(_time, 60s)
    | sort by bucket asc, status_class asc"
`;

exports[`queries.ts — golden snapshots + invariants > serviceSummary (all) > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            is_error=(tostring(status.code)=="2")

    | where dur_us < 30000000
    | summarize requests=count(),
                raw_errors=countif(is_error),
                p50_us=percentile(dur_us, 50),
                p95_us=percentile(dur_us, 95),
                p99_us=percentile(dur_us, 99),
                last_seen=max(_time)
      by svc
    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend svc=tostring(resource.attributes['service.name']),
             span_kind=tostring(kind),
             http_status=toint(attributes['http.response.status_code']),
             grpc_status=toint(attributes['rpc.grpc.status_code']),
             sid=tostring(span_id)


    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | where tostring(parent_span_id) == ""
        | extend root_svc=tostring(resource.attributes['service.name'])
        | project trace_id, root_svc
        | lookup criblapm_trace_originators on root_svc
      ) on trace_id
    | extend trace_origin=coalesce(type, "unknown")
    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend child_parent=tostring(parent_span_id)
    | where isnotempty(child_parent)
    | summarize n_error_children=count() by trace_id, child_parent
      ) on trace_id, $left.sid == $right.child_parent
    | extend has_error_child=isnotnull(n_error_children)
    | extend counts_as_error = not((has_error_child == true) or (trace_origin == "user" and (isnotnull(http_status) and http_status >= 400 and http_status <= 499)) or (trace_origin == "user" and grpc_status in (3,5,6,7,11,16)))
    | where counts_as_error
    | summarize filtered_errors=count() by svc
      ) on svc
    | extend errors=coalesce(filtered_errors, tolong(0))
    | extend error_rate=iff(requests > 0, toreal(errors)/toreal(requests), 0.0)
    | project svc, requests, errors, raw_errors,
              p50_us, p95_us, p99_us, last_seen, error_rate
    | sort by requests desc"
`;

exports[`queries.ts — golden snapshots + invariants > serviceSummary (scoped) > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            is_error=(tostring(status.code)=="2")
    | where svc=="test-svc"
    | where dur_us < 30000000
    | summarize requests=count(),
                raw_errors=countif(is_error),
                p50_us=percentile(dur_us, 50),
                p95_us=percentile(dur_us, 95),
                p99_us=percentile(dur_us, 99),
                last_seen=max(_time)
      by svc
    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend svc=tostring(resource.attributes['service.name']),
             span_kind=tostring(kind),
             http_status=toint(attributes['http.response.status_code']),
             grpc_status=toint(attributes['rpc.grpc.status_code']),
             sid=tostring(span_id)
    | where svc=="test-svc"

    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
        | where tostring(parent_span_id) == ""
        | extend root_svc=tostring(resource.attributes['service.name'])
        | project trace_id, root_svc
        | lookup criblapm_trace_originators on root_svc
      ) on trace_id
    | extend trace_origin=coalesce(type, "unknown")
    | join kind=leftouter (
        dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(status.code) == "2"
    | extend child_parent=tostring(parent_span_id)
    | where isnotempty(child_parent)
    | summarize n_error_children=count() by trace_id, child_parent
      ) on trace_id, $left.sid == $right.child_parent
    | extend has_error_child=isnotnull(n_error_children)
    | extend counts_as_error = not((has_error_child == true) or (trace_origin == "user" and (isnotnull(http_status) and http_status >= 400 and http_status <= 499)) or (trace_origin == "user" and grpc_status in (3,5,6,7,11,16)))
    | where counts_as_error
    | summarize filtered_errors=count() by svc
      ) on svc
    | extend errors=coalesce(filtered_errors, tolong(0))
    | extend error_rate=iff(requests > 0, toreal(errors)/toreal(requests), 0.0)
    | project svc, requests, errors, raw_errors,
              p50_us, p95_us, p99_us, last_seen, error_rate
    | sort by requests desc"
`;

exports[`queries.ts — golden snapshots + invariants > serviceTimeSeries > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0,
            is_error=(tostring(status.code)=="2")

    | where tostring(kind) in ("2", "5")
    | where dur_us < 30000000
    | summarize requests=count(),
                errors=countif(is_error),
                p50_us=percentile(dur_us, 50),
                p95_us=percentile(dur_us, 95),
                p99_us=percentile(dur_us, 99)
      by svc, bucket=bin(_time, 60s)
    | sort by svc asc, bucket asc"
`;

exports[`queries.ts — golden snapshots + invariants > services > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name'])
    | summarize by svc
    | sort by svc asc"
`;

exports[`queries.ts — golden snapshots + invariants > slowestTraces (all) > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            parent=tostring(parent_span_id),
            is_root=(parent=="" or isempty(parent)),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0

    | summarize span_count=count(),
                first_seen=min(_time),
                trace_start_ns=min(start_time_unix_nano),
                trace_end_ns=max(end_time_unix_nano),
                max_non_root_dur_us=maxif(dur_us, is_root == false),
                root_op=minif(name, is_root)
      by trace_id
    | extend trace_dur_us=(toreal(trace_end_ns)-toreal(trace_start_ns))/1000.0
    | extend max_child_us=iff(isnull(max_non_root_dur_us), 0.0, toreal(max_non_root_dur_us))
    | where not (trace_dur_us > 30000000 and (span_count < 3 or (max_child_us / trace_dur_us) < 0.1) and not (root_op matches regex "[Cc]onsume[d]?|CONSUME[D]?"))
    | sort by trace_dur_us desc
    | limit 20"
`;

exports[`queries.ts — golden snapshots + invariants > slowestTraces (scoped) > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | extend svc=tostring(resource.attributes['service.name']),
            parent=tostring(parent_span_id),
            is_root=(parent=="" or isempty(parent)),
            dur_us=(toreal(end_time_unix_nano)-toreal(start_time_unix_nano))/1000.0
    | where svc=="test-svc"
    | summarize span_count=count(),
                first_seen=min(_time),
                trace_start_ns=min(start_time_unix_nano),
                trace_end_ns=max(end_time_unix_nano),
                max_non_root_dur_us=maxif(dur_us, is_root == false),
                root_op=minif(name, is_root)
      by trace_id
    | extend trace_dur_us=(toreal(trace_end_ns)-toreal(trace_start_ns))/1000.0
    | extend max_child_us=iff(isnull(max_non_root_dur_us), 0.0, toreal(max_non_root_dur_us))
    | where not (trace_dur_us > 30000000 and (span_count < 3 or (max_child_us / trace_dur_us) < 0.1) and not (root_op matches regex "[Cc]onsume[d]?|CONSUME[D]?"))
    | sort by trace_dur_us desc
    | limit 20"
`;

exports[`queries.ts — golden snapshots + invariants > spotlightAttrDiff > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)

    | extend attr_value=tostring(attributes['http.method']),
             sel_match=status_code == "2"
    | where isnotempty(attr_value)
    | summarize sel_n=countif(sel_match==true),
                base_n=countif(sel_match==false)
      by attr_value
    | extend total=sel_n+base_n
    | sort by total desc
    | limit 20
    | extend attr_name="http.method"
    | project attr_name, attr_value, sel_n, base_n"
`;

exports[`queries.ts — golden snapshots + invariants > traceLogs > snapshot stable 1`] = `
"dataset="otel"
    | where isnotnull(body) and isnotnull(severity_number)
    | where trace_id=="0123456789abcdef"
    | project _time, trace_id, span_id, body, severity_text, severity_number,
              attributes,
              service_name=tostring(resource.attributes['service.name']),
              code_file=tostring(attributes['code.file.path']),
              code_function=tostring(attributes['code.function.name']),
              code_line=attributes['code.line.number']
    | sort by _time asc
    | limit 5000"
`;

exports[`queries.ts — golden snapshots + invariants > traceOriginators > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | where tostring(parent_span_id) == ""
    | extend root_svc=tostring(resource.attributes['service.name']),
             ua=tostring(attributes['http.user_agent']),
             msg_sys=tostring(attributes['messaging.system']),
             span_name=tostring(name)
    // Character-class alternation instead of (?i): the inline flag
    // upstream of export-to-lookup makes the func:store write stage
    // emit a CSV that reports totalEventsOut correctly but is not
    // joinable — lookup-on-root_svc returns no matches. Same bug
    // family as the mv-expand/export incompatibility in
    // attrCatalogComputeQuery. Found 2026-06-09 when the lookup
    // never repopulated after the dataset-empty wipe.
    | extend ua_browser=(ua matches regex "[Mm]ozilla|[Cc]hrome|[Ss]afari|[Ff]irefox|[Ee]dge|[Oo]pera"),
             ua_loadtest=(ua matches regex "k6|[Ll]ocust|[Jj]meter|[Gg]atling|wrk|ab/|[Ll]oadgen"),
             ua_probe=(ua matches regex "kube-probe|[Gg]o-http-client|[Hh]ealthcheck|[Ll]iveness|[Rr]eadiness"),
             has_msg=isnotempty(msg_sys),
             name_user=(span_name matches regex "(^|_)([Uu]ser|[Bb]rowse|[Vv]iew|[Cc]heckout|[Cc]art|[Ss]earch)(_|$)"),
             name_service=(span_name matches regex "(^|_)([Tt]ick|[Cc]ron|[Cc]onsume|[Pp]rocess|[Pp]oll|[Ww]orker|[Jj]ob|[Tt]ask)(_|$)")
    | summarize total=count(),
                n_browser=countif(ua_browser),
                n_loadtest=countif(ua_loadtest),
                n_probe=countif(ua_probe),
                n_msg=countif(has_msg),
                n_name_user=countif(name_user),
                n_name_service=countif(name_service)
        by root_svc
    | extend type=case(
        todouble(n_browser+n_loadtest)/todouble(total) >= 0.5, "user",
        todouble(n_probe)/todouble(total) >= 0.5, "service",
        todouble(n_msg)/todouble(total) >= 0.5, "service",
        todouble(n_name_user)/todouble(total) >= 0.5, "user",
        todouble(n_name_service)/todouble(total) >= 0.5, "service",
        "unknown")
    | where total >= 10
    | project root_svc, type, total,
              n_browser, n_loadtest, n_probe, n_msg,
              n_name_user, n_name_service"
`;

exports[`queries.ts — golden snapshots + invariants > traceSpans > snapshot stable 1`] = `
"dataset="otel" | where isnotnull(end_time_unix_nano)
    | where trace_id in ("0123456789abcdef", "fedcba9876543210")
    | project _time, trace_id, span_id, parent_span_id, name, kind,
              start_time_unix_nano, end_time_unix_nano,
              attributes, events, links,
              status_code=tostring(status.code), status_message=tostring(status.message),
              service_name=tostring(resource.attributes['service.name']),
              resource_attributes=resource.attributes
    | sort by start_time_unix_nano asc"
`;
